# api/openapi.yaml
@@ -316,90 +316,6 @@ components:
         - en-US
         - fr-CA
         type: string
-    bbox:
-      name: bbox
-      description: |-
-        Only features that have a geometry that intersects the bounding box are selected.
-        The bounding box is provided as four or six numbers, depending on whether the
-        coordinate reference system includes a vertical axis (height or depth):
-
-        * Lower left corner, coordinate axis 1
-        * Lower left corner, coordinate axis 2
-        * Minimum value, coordinate axis 3 (optional)
-        * Upper right corner, coordinate axis 1
-        * Upper right corner, coordinate axis 2
-        * Maximum value, coordinate axis 3 (optional)
-
-        The coordinate reference system of the values is WGS 84 longitude/latitude
-        (http://www.opengis.net/def/crs/OGC/1.3/CRS84) unless a different coordinate
-        reference system is specified in the parameter `bbox-crs`.
-
-        For WGS 84 longitude/latitude the values are in most cases the sequence of
-        minimum longitude, minimum latitude, maximum longitude and maximum latitude.
-        However, in cases where the box spans the antimeridian the first value
-        (west-most box edge) is larger than the third value (east-most box edge).
-
-        If the vertical axis is included, the third and the sixth number are
-        the bottom and the top of the 3-dimensional bounding box.
-
-        If a feature has multiple spatial geometry properties, it is the decision of the
-        server whether only a single spatial geometry property is used to determine
-        the extent or all relevant geometries.
-      in: query
-      required: false
-      schema:
-        type: array
-        minItems: 4
-        maxItems: 6
-        items:
-          type: number
-        default:
-        - -113.43
-        - 53.51
-        - -113.22
-        - 53.59
-      style: form
-      explode: false
-    bbox-crs:
-      name: bbox-crs
-      description: |-
-        Indicates the EPSG for the given bbox coordinates
-      in: query
-      required: false
-      schema:
-        type: number
-        format: integer
-        default: 4617
-      style: form
-      explode: false
-    geom:
-      name: geom
-      description: |-
-        Only features that have a geometry that intersects the provided geometry are selected.
-        The geometry is provided as a well known text format (WKT)
-
-        The coordinate reference system of the values is WGS 84 longitude/latitude
-        (http://www.opengis.net/def/crs/OGC/1.3/CRS84) unless a different coordinate
-        reference system is specified in the parameter `geom-crs`.
-      in: query
-      required: false
-      schema:
-        type: string
-        default: POLYGON ((-113.43 53.51, -113.43 53.59, -113.22 53.59, -113.22 53.51, -113.43 53.51))
-      style: form
-      explode: false
-    geom-crs:
-      name: geom-crs
-      description: |-
-        Indicates the EPSG for the given geom wkt
-      in: query
-      required: false
-      schema:
-        type: number
-        format: integer
-        default: 4617
-      style: form
-      explode: false
 
   responses:
     AccessToken:
@@ -475,219 +391,6 @@ components:
             $ref: '#/components/schemas/ParentsResponse'
 
   schemas:
-    collection:
-      type: object
-      required:
-        - id
-        - links
-      properties:
-        id:
-          description: identifier of the collection used, for example, in URIs
-          type: string
-          example: address
-        title:
-          description: human readable title of the collection
-          type: string
-          example: address
-        description:
-          description: a description of the features in the collection
-          type: string
-          example: An address.
-        links:
-          type: array
-          items:
-            $ref: "#/components/schemas/link"
-          example:
-            - href: http://data.example.com/buildings
-              rel: item
-            - href: http://example.com/concepts/buildings.html
-              rel: describedBy
-              type: text/html
-        extent:
-          $ref: "#/components/schemas/extent"
-        itemType:
-          description: indicator about the type of the items in the collection (the default value is 'feature').
-          type: string
-          default: feature
-        crs:
-          description: the list of coordinate reference systems supported by the service
-          type: array
-          items:
-            type: string
-          default:
-            - http://www.opengis.net/def/crs/OGC/1.3/CRS84
-          example:
-            - http://www.opengis.net/def/crs/OGC/1.3/CRS84
-            - http://www.opengis.net/def/crs/EPSG/0/4326
-    collections:
-      type: object
-      required:
-        - links
-        - collections
-      properties:
-        links:
-          type: array
-          items:
-            $ref: "#/components/schemas/link"
-        collections:
-          type: array
-          items:
-            $ref: "#/components/schemas/collection"
-    link:
-      type: object
-      required:
-        - href
-      properties:
-        href:
-          type: string
-          example: http://data.example.com/buildings/123
-        rel:
-          type: string
-          example: alternate
-        type:
-          type: string
-          example: application/geo+json
-        hreflang:
-          type: string
-          example: en
-        title:
-          type: string
-          example: Trierer Strasse 70, 53115 Bonn
-        length:
-          type: integer
-    extent:
-      type: object
-      description: |-
-        The extent of the features in the collection. In the Core only spatial and temporal
-        extents are specified. Extensions may add additional members to represent other
-        extents, for example, thermal or pressure ranges.
-      properties:
-        spatial:
-          description: |-
-            The spatial extent of the features in the collection.
-          type: object
-          properties:
-            bbox:
-              description: |-
-                One or more bounding boxes that describe the spatial extent of the dataset.
-                In the Core only a single bounding box is supported. Extensions may support
-                additional areas. If multiple areas are provided, the union of the bounding
-                boxes describes the spatial extent.
-              type: array
-              minItems: 1
-              items:
-                description: |-
-                  Each bounding box is provided as four or six numbers, depending on
-                  whether the coordinate reference system includes a vertical axis
-                  (height or depth):
-
-                  * Lower left corner, coordinate axis 1
-                  * Lower left corner, coordinate axis 2
-                  * Minimum value, coordinate axis 3 (optional)
-                  * Upper right corner, coordinate axis 1
-                  * Upper right corner, coordinate axis 2
-                  * Maximum value, coordinate axis 3 (optional)
-
-                  The coordinate reference system of the values is WGS 84 longitude/latitude
-                  (http://www.opengis.net/def/crs/OGC/1.3/CRS84) unless a different coordinate
-                  reference system is specified in `crs`.
-
-                  For WGS 84 longitude/latitude the values are in most cases the sequence of
-                  minimum longitude, minimum latitude, maximum longitude and maximum latitude.
-                  However, in cases where the box spans the antimeridian the first value
-                  (west-most box edge) is larger than the third value (east-most box edge).
-
-                  If the vertical axis is included, the third and the sixth number are
-                  the bottom and the top of the 3-dimensional bounding box.
-
-                  If a feature has multiple spatial geometry properties, it is the decision of the
-                  server whether only a single spatial geometry property is used to determine
-                  the extent or all relevant geometries.
-                type: array
-                minItems: 4
-                maxItems: 6
-                items:
-                  type: number
-                example:
-                  - -180
-                  - -90
-                  - 180
-                  - 90
-            crs:
-              description: |-
-                Coordinate reference system of the coordinates in the spatial extent
-                (property `bbox`). The default reference system is WGS 84 longitude/latitude.
-                In the Core this is the only supported coordinate reference system.
-                Extensions may support additional coordinate reference systems and add
-                additional enum values.
-              type: string
-              enum:
-                - 'http://www.opengis.net/def/crs/OGC/1.3/CRS84'
-              default: 'http://www.opengis.net/def/crs/OGC/1.3/CRS84'
-        temporal:
-          description: |-
-            The temporal extent of the features in the collection.
-          type: object
-          properties:
-            interval:
-              description: |-
-                One or more time intervals that describe the temporal extent of the dataset.
-                The value `null` is supported and indicates an open time intervall.
-                In the Core only a single time interval is supported. Extensions may support
-                multiple intervals. If multiple intervals are provided, the union of the
-                intervals describes the temporal extent.
-              type: array
-              minItems: 1
-              items:
-                description: |-
-                  Begin and end times of the time interval. The timestamps
-                  are in the coordinate reference system specified in `trs`. By default
-                  this is the Gregorian calendar.
-                type: array
-                minItems: 2
-                maxItems: 2
-                items:
-                  type: string
-                  format: date-time
-                  nullable: true
-                example:
-                  - '2011-11-11T12:22:11Z'
-                  - null
-            trs:
-              description: |-
-                Coordinate reference system of the coordinates in the temporal extent
-                (property `interval`). The default reference system is the Gregorian calendar.
-                In the Core this is the only supported temporal reference system.
-                Extensions may support additional temporal reference systems and add
-                additional enum values.
-              type: string
-              enum:
-                - 'http://www.opengis.net/def/uom/ISO-8601/0/Gregorian'
-              default: 'http://www.opengis.net/def/uom/ISO-8601/0/Gregorian'
-    collbbox:
-      properties:
-        bbox:
-          type: array
-          items:
-            type: number
-            format: float
-          example:
-          - -113.43
-          - 53.51
-          - -113.22
-          - 53.59
-        bboxcrs:
-          type: number
-          format: integer
-          example: 4617
-        geom:
-          type: string
-          example: POLYGON ((-113.43 53.51, -113.43 53.59, -113.22 53.59, -113.22 53.51, -113.43 53.51))
-        geomcrs:
-          type: number
-          format: integer
-          example: 4617
-
     MetadataResponse:
       type: object
       properties:
